@@ -24,6 +24,9 @@
 2005-01-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/tga.c (WriteTGAImage): Incorported patch from Stefan
+        v. Wachter to enable writing grayscale images as well as adding
+        more image type option smarts.<BR>
   <LI> coders/psd.c (ReadPSDImage): Fix stack overflow vulnerability
         reported by Andrei Nigmatulin.
 
